; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_fault_32.c_window_overflow_fault.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_fault_32.c_window_overflow_fault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }

@PAGE_MASK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @window_overflow_fault() #0 {
  %1 = alloca i64, align 8
  %2 = call %struct.TYPE_2__* (...) @current_thread_info()
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i64*, i64** %3, align 8
  %5 = getelementptr inbounds i64, i64* %4, i64 0
  %6 = load i64, i64* %5, align 8
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* %1, align 8
  %8 = add i64 %7, 56
  %9 = load i64, i64* @PAGE_MASK, align 8
  %10 = and i64 %8, %9
  %11 = load i64, i64* %1, align 8
  %12 = load i64, i64* @PAGE_MASK, align 8
  %13 = and i64 %11, %12
  %14 = icmp ne i64 %10, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %0
  %16 = load i64, i64* %1, align 8
  %17 = add i64 %16, 56
  %18 = call i32 @force_user_fault(i64 %17, i32 1)
  br label %19

19:                                               ; preds = %15, %0
  %20 = load i64, i64* %1, align 8
  %21 = call i32 @force_user_fault(i64 %20, i32 1)
  ret void
}

declare dso_local %struct.TYPE_2__* @current_thread_info(...) #1

declare dso_local i32 @force_user_fault(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
